# tmebot

./: .coveragerc  Makefile  README.md  license  pyproject.toml
docs/: index.md  polling.md  webhook.md
docs/filters/: builtin.md  index.md
docs/routing/: exception_handlers.md  middlewares.md  registration.md
src/tmebot/: __init__.py  app.py  bot.py  logger.py  polling.py
src/tmebot/filters/: __init__.py  chat_type.py  text.py
