[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "tmebot"
version = "1.0"
authors = [
    { name = "t-me-api", email = "seryumed@gmail.com" }
]
keywords = [
    "asyncio",
    "bot",
    "telegram",
    "anyio",
    "telegram-api",
    "api",
]
dependencies = [
    "tapp~=1.0",
    "tbot_api~=1.0",
]
description = "The Library For Build Telegram Bots"
readme = "README.md"
requires-python = ">=3.7"

[project.optional-dependencies]
test = [
    "pytest~=7.2.1",
    "pytest-cov~=4.0.0",
    "pytest-asyncio~=0.20.3",
]
dev = [
    "black~=23.1",
    "isort~=5.11",
    "ruff~=0.0.246"
]

[tool.ruff]
line-length = 99
select = [
    "C4",
    "E",
    "F",
    "T10",
    "T20",
    "Q",
    "RET",
]
src = ["src/tmebot"]
ignore = [
    "F401"
]
exclude = [
    ".git",
    "dist",
    ".venv",
    "tests",
]
target-version = "py37"

[tool.black]
line-length = 99
target-version = ['py37', 'py38', 'py39', 'py310', 'py311']
exclude = '''
(
    \.git
  | dist
  | venv
)
'''

[tool.isort]
profile = "black"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = [
    "tests",
]
